<resources>
    <string name="app_name">Multi Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Multi Calculator</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Basic_calculator">Basic calculator</string>
    <string name="unit_converter">Unit converter</string>
    <string name="currency_converter">Currency converter</string>
    <string name="discount_cal">Discount calculator</string>
    <string name="age_cal">Age calculator</string>
    <string name="loan_cal">Loan calculator</string>
    <string name="bmi_cal">Bmi calculator</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="dark_mode">Dark Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>