<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_basiccal">

    <fragment
        android:id="@+id/nav_basiccal"
        android:name="com.skhabib.multicalculator.ui.basiccal.BasicCalFragment"
        android:label="@string/Basic_calculator"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_unit_converter"
        android:name="com.skhabib.multicalculator.ui.unitCalculator.UnitCalFragment"
        android:label="@string/unit_converter"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_currency_converter"
        android:name="com.skhabib.multicalculator.ui.slideshow.SlideshowFragment"
        android:label="@string/currency_converter"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_discount_cal"
        android:name="com.skhabib.multicalculator.ui.Discount.DiscountFragment"
        android:label="@string/discount_cal"
        tools:layout="@layout/fragment_discount" />

    <fragment
        android:id="@+id/nav_age_cal"
        android:name="com.skhabib.multicalculator.ui.dateOfbirth.AgeCalFragment"
        android:label="@string/age_cal"
        tools:layout="@layout/fragment_discount" />
    <fragment
        android:id="@+id/nav_loan"
        android:name="com.skhabib.multicalculator.ui.loan.loanFragment"
        android:label="@string/loan_cal"
        tools:layout="@layout/fragment_loan" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.skhabib.multicalculator.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />
</navigation>